[package]
name = "glog-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.72"
byteorder = "1.4.3"
cfb-mode = "0.8.2"
dotenvy = "0.15.7"
elliptic-curve = "0.13.5"
flate2 = { version = "1.0.26", features = ["zlib"] }
hex = "0.4.3"
k256 = { version = "0.13.1", features = ["ecdh"] }
num-derive = "0.4.0"
num-traits = "0.2.16"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
thiserror = "1.0.44"

[dev-dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
lazy_static = "1.4.0"
tokio = { version = "1.29.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
